--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="StyleSheet1.css">
 <html>
 <body>
-    <h1>Hello World</h1>
-    <p>Test Test</p>
+    <nav>
+        <div class="nav-container">
+
+            <p class="navbar-font">Sam Schutten</p>
+
+            <a class="button-projects" href="index.html">Home</a>
+            <a class="button-projects" href="projecten.html">Mijn Projecten</a>
+            <a class="button-projects" href="dashersite.html">NEON Dasher</a>
+        </div>
+    </nav>
+    <h1>Portfolio Sam Schutten</h1>
+    <p class="undertext">Student Software Developer</p>
+    <p class="overmijtext">Over Mij</p>
+    <img class="image1" src="Images/Uno.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
+
+    <div class="image-text-container">
+        <p class="overmijondertext">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
+    </div>
+    <p class="ervaring-headertext">Mijn Ervaring</p>
+
+    <div class="ervaring-container">
+        <img class="image2" src="Images/Dos.jpg" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
+        <img class="image3" src="Images/Tres.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
+    </div>
+
+    <div class="ervaring-text-container">
+        <p class="ervaring-ondertext">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
+    </div>
 </body>
 </html>
