--- a/hahayouthoughtitwasgonnabewebsite2argdidntyou.html
+++ b/hahayouthoughtitwasgonnabewebsite2argdidntyou.html
@@ -1,8 +1,16 @@
+<link rel="stylesheet" href="StyleSheet2.css">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>shonk</title>
+    <title>the final count down</title>
 </head>
 <body>
-    <p>aaaaaaaaaaaaaaaaaaaaaaaas</p>
+    <div>
+        <p>Almost there, You're getting close</p>
+        <p>All thats left is to pick up the final puzzle pieces</p>
+        <p>Left by those before, search and you shall find</p>
+        <p>hell, i'll give you one for free</p>
+        <p>this clue is so big you can't miss it, even from outside its still visible</p>
+        <p>[ ] [ ] [ ] [ ]</p>
+    </div>
 </body>
 </html>
