--- a/website1arg.html
+++ b/website1arg.html
@@ -14,7 +14,11 @@
         <p>Dilara's body not the first</p>
         <p>Many more have been before, many more will come after</p>
         <p>Where do you think Gep went?</p>
-        <p></p>
+        <p>Even though i'd rather not get caught, i do like myself a little game</p>
+        <p>Find out who i am, follow my breadcrumbs, if you win, turn me in.</p>
+        <p>But run out of time, and Kenneth is next</p>
+        <p>Your first clue finds itself at the broken ruins of a holographic machine, ditched in our school, never to be repaired</p>
     </div>
+    <img src="images/jadasf.jpg" alt="skibidi Text" />
 </body>
 </html>
