--- a/website1arg.html
+++ b/website1arg.html
@@ -21,6 +21,6 @@
         <p>But run out of time, and Kenneth is next</p>
         <p>Your first clue finds itself at the broken ruins of a holographic machine, ditched in our school, never to be repaired</p>
     </div>
-    <img src="images/jadasf.jpg" alt="skibidi Text" />
+    <img src="Images/jadasf.jpg" alt="skibidi Text"/>
 </body>
 </html>
