--- a/dashersite.html
+++ b/dashersite.html
@@ -23,8 +23,8 @@
     </div>
 
     <div class="ervaring-text-container">
-        <p class="ervaring-ondertext">"Wij begonnen een maand geleden met ons project Microgame, en wij kwamen snel op het idee van een 80's style, Subway Surfers movementinspired 2d game."</p>
-        <p class="ervaring-ondertext">"vanaf daar begon het prototypen en testen, tot wij een werkend idee hadden dat wij daarna gingen refinen tot het spel dat wij nu hebben"</p>
+        <p class="ervaring-ondertext">Wij begonnen een maand geleden met ons project Microgame, en wij kwamen snel op het idee van een 80's style, Subway Surfers movementinspired 2d game.</p>
+        <p class="ervaring-ondertext">vanaf daar begon het prototypen en testen, tot wij een werkend idee hadden dat wij daarna gingen refinen tot het spel dat wij nu hebben</p>
 
     </div>
 
@@ -37,7 +37,7 @@
     </div>
 
     <div class="ervaring-text-container">
-        <p class="ervaring-ondertext">"Een paar kleine delen van mijn scripts, bijde van de playermovement script, zodat de player makkelijk en snel kan bewegen over de grid."</p>
+        <p class="ervaring-ondertext">Een paar kleine delen van mijn scripts, bijde van de playermovement script, zodat de player makkelijk en snel kan bewegen over de grid.</p>
     </div>
 
     <p class="ervaring-headertext">Reviews</p>
