--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <img class="image1" src="Images/Uno.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
 
     <div class="image-text-container">
-        <p class="overmijondertext">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
+        <p class="overmijondertext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
     <p class="ervaring-headertext">Mijn Ervaring</p>
 
     <div class="ervaring-container">
-        <img class="image2" src="Images/Dos.jpg" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
+        <img class="image2" src="Images/Dos.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
         <img class="image3" src="Images/Tres.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
     </div>
 
     <div class="ervaring-text-container">
-        <p class="ervaring-ondertext">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
+        <p class="ervaring-ondertext">Ik ben bekend met meerdere verschillende programmeertalen, waaronder C#, HTML en CSS, en ben ook bekend met Software zoals Unity, Github en .NET.</p>
     </div>
 </body>
 </html>
