--- a/projecten.html
+++ b/projecten.html
@@ -13,15 +13,16 @@
         </div>
     </nav>
     <h1>Mijn Projecten</h1>
-    <p class="ervaring-headertext">Hightlights</p>
+    <p class="ervaring-headertext">Highlights</p>
 
     <div class="ervaring-container">
-        <img class="image2" src="Images/Dos.jpg" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
-        <img class="image3" src="Images/Tres.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
+        <img class="image2" src="Images/Quatro.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
+        <img class="image4" src="Images/icon.jpg" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
+        <img class="image3" src="Images/Cinco.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
     </div>
 
-    <div class="ervaring-text-container">
-        <p class="ervaring-ondertext">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "</p>
+    <div class="highlights-text-container">
+        <p class="highlights-ondertext">Een paar van mijn grootste projecten tot nu toe zijn mijn Groepsproject Microgame; NEON Dasher, een Text Adventure gemaakt in .NET; Reclaimer, en een 2D Runner Game; Definitely Not Catnip.</p>
     </div>
 </body>
 </html>
