--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
 
         </div>
     </nav>
-    <h1>Mijn Projecten</h1>
-    <p class="ervaring-headertext">Highlights</p>
+    <h1>Contact</h1>
+    <p class="ervaring-headertext">Contacten Lijst</p>
 
     <div class="ervaring-container">
         <img class="image2" src="Images/Quatro.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
@@ -23,10 +23,5 @@
         <img class="image3" src="Images/Cinco.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
     </div>
 
-    <div class="highlights-text-container">
-        <p class="highlights-ondertext">Een paar van mijn grootste projecten tot nu toe zijn mijn Groepsproject Microgame; NEON Dasher, een Text Adventure gemaakt in .NET; Reclaimer, en een 2D Runner Game; Definitely Not Catnip.</p>
-    </div>
-
-    
 </body>
 </html>
