--- a/dashersite.html
+++ b/dashersite.html
@@ -10,6 +10,7 @@
             <a class="button-projects" href="index.html">Home</a>
             <a class="button-projects" href="projecten.html">Mijn Projecten</a>
             <a class="button-projects" href="dashersite.html">NEON Dasher</a>
+            <a class="button-projects" href="contact.html">Contact</a>
         </div>
     </nav>
     <h1>NEON Dasher</h1>
@@ -17,9 +18,9 @@
 
     <div class="ervaring-container">
         <img class="image2" src="Images/icon.jpg" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
-        <video class="trailer" controls="controls" width="240" height="360">
-            <source src="videos/trailer.mp4" type="video/mp4" />
-        </video>
+        <iframe class="trailer" width="420" height="315"
+                src="https://www.youtube.com/embed/95yYzHYJDIM?si=bWhOXeQxHnOKdLQy">
+        </iframe>
     </div>
 
     <div class="ervaring-text-container">
