--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <a class="button-projects" href="index.html">Home</a>
             <a class="button-projects" href="projecten.html">Mijn Projecten</a>
             <a class="button-projects" href="dashersite.html">NEON Dasher</a>
+            <a class="button-projects" href="contact.html">Contact</a>
         </div>
     </nav>
     <h1>Portfolio Sam Schutten</h1>
@@ -18,7 +19,17 @@
     <img class="image1" src="Images/Uno.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
 
     <div class="image-text-container">
-        <p class="overmijondertext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p class="overmijondertext">
+            Hallo!
+            Ik ben Sam Schutten, een 17 jarige student Stoftware Developer uit hartje Achterhoek.
+        </p>
+        <p class="overmijondertext">
+            Ik ben volg een Opleiding aan het ROC van Twente in Enschede.
+            Ik ben een erg geïnteresseerd in classic games en muziek, en hou van touren met mijn brommer en chillen met vrienden.
+        </p>
+        <p class="overmijondertext">
+            Ik heb passie voor het bedenken, designen en maken van Games en Programma's, op deze website vind je een paar van mijn projecten en mijn vaardigheden!
+        </p>
     </div>
     <p class="ervaring-headertext">Mijn Ervaring</p>
 
@@ -29,6 +40,27 @@
 
     <div class="ervaring-text-container">
         <p class="ervaring-ondertext">Ik ben bekend met meerdere verschillende programmeertalen, waaronder C#, HTML en CSS, en ben ook bekend met Software zoals Unity, Github en .NET.</p>
+    </div>
+    <div class="bar-container">
+        <p class="csharp-text">C#</p>
+        <div class="container">
+            <div class="skills csharp">90%</div>
+        </div>
+
+        <p class="html-text">HTML</p>
+        <div class="container">
+            <div class="skills html">75%</div>
+        </div>
+
+        <p class="css-text">CSS</p>
+        <div class="container">
+            <div class="skills css">70%</div>
+        </div>
+
+        <p class="python-text">PYTHON</p>
+        <div class="container">
+            <div class="skills python">50%</div>
+        </div>
     </div>
 </body>
 </html>
