--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,9 @@
     <p class="ervaring-headertext">Contacten Lijst</p>
 
     <div class="ervaring-container">
-        <img class="image2" src="Images/Quatro.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
-        <img class="image4" src="Images/icon.jpg" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
-        <img class="image3" src="Images/Cinco.png" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
+        <img class="image2" src="Images/yurp.jpg" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
+        <img class="image4" src="Images/yurp.jpg" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
+        <img class="image3" src="Images/yurp.jpg" alt="ERROR IMAGE NOT LOADING, PANIC TIME" />
     </div>
 
 </body>
