--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
     <div class="image-text-container">
         <p class="overmijondertext">
-            Hallo!
-            Ik ben Sam Schutten, een 17 jarige student Stoftware Developer uit hartje Achterhoek.
+            Hallo,
+            ik ben Sam Schutten, een 17 jarige student Stoftware Developer uit hartje Achterhoek.
         </p>
         <p class="overmijondertext">
-            Ik ben volg een Opleiding aan het ROC van Twente in Enschede.
-            Ik ben een erg geïnteresseerd in classic games en muziek, en hou van touren met mijn brommer en chillen met vrienden.
+            Ik volg een opleiding aan het ROC Van Twente in Enschede.
+            Ik ben erg geinteresseerd in classic games en muziek en hou van touren met mijn brommer en chillen met vrienden.
         </p>
         <p class="overmijondertext">
-            Ik heb passie voor het bedenken, designen en maken van Games en Programma's, op deze website vind je een paar van mijn projecten en mijn vaardigheden!
+            Ik heb passie voor het bedenken, designen en maken van games en programma's. Op deze website vind je een paar van mijn projecten en vaardigheden!
         </p>
     </div>
     <p class="ervaring-headertext">Mijn Ervaring</p>
